1.2.4p1:
    Core & Setup:
    * 0282 FIX: TIMEPERIOD TRANSITION messages no longer cut at 64 bytes...

    Checks & Agents:
    * 0279 FIX: check_mk_agent.solaris: removed proc section from statgrab...
    * 0281 FIX: statgrab_net.ctr: only inventorize interfaces with actual traffic...
    * 0667 FIX: oracle_asm_diskgroup: Now really uses the generic filesystem levels...
    * 0555 FIX: snmp_uptime: no longer fails if uptime is < 1 seconds
    * 0136 FIX: cisco_fru_power: Prevent inventory of not exsisting devices
    * 0673 FIX: zfsget: Fixed broken check - was not compatible to current agent output of "df"
    * 0719 FIX: postfix_mailq: fix Linux agent in case of ssmtp being installed
    * 0137 FIX: Fixed printer_pages...
    * 0563 FIX: windows agent: now able to process perl scripts...

    Multisite:
    * 0278 FIX: Fixed bookmark icon images for non-english user languages...
    * 0670 FIX: LDAP: Fixed sync when non lower case attributes are configured...
    * 0671 FIX: LDAP: Disable logging of password changes received from LDAP
    * 0558 FIX: availability: fixed exception on specific filter settings...
    * 0712 FIX: Fix multiple groups with same tag when grouping hosts after a tag...

    WATO:
    * 0559 FIX: WATO snapshots: improved validation of (uploaded) snapshots...
    * 0709 FIX: Fix NoneType has not attribute userdb_automatic_sync bug in D-WATO
    * 0728 FIX: mem.win: fixed bug in WATO configuration rule...
    * 0139 FIX: ldap sync: syncing if rules against ldap is not longer case sensitiv

    BI:
    * 0669 FIX: Fixed regex matching in BI when using character groups [...]...

    Event Console:
    * 0672 FIX: Service item of "Check event state in event console" checks can now be configured...


1.2.4:
    Core & Setup:
    * 0682 FIX: Allow overriding of active and custom checks by more specific rule...
    * 0267 FIX: Fixed auth.serials permission problem in check_mk standalone installation...

    Checks & Agents: