@@ -1,6 +1,7 @@
 1.2.4p1:
     Core & Setup:
     * 0282 FIX: TIMEPERIOD TRANSITION messages no longer cut at 64 bytes...
+    * 0730 FIX: cmc: fixed bug displaying logentries after a logfile rotation...
 
     Checks & Agents:
     * 0279 FIX: check_mk_agent.solaris: removed proc section from statgrab...
